<resources>
    <string name="app_name">Newsly</string>
    <string name="source_name">Название источника</string>
    <string name="author">Имя автора</string>
    <string name="title">Название статьи</string>
    <string name="description">Краткое описание</string>
    <string name="publishedAt">Дата публикации</string>
    <string name="article_image">Картинка статьи</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_news">Поиск новостей...</string>
    <string name="search">Поиск</string>
    <string name="start_date">Начальная дата</string>
    <string name="end_date">Конечная дата</string>
    <string name="cancel">Назад</string>
    <string name="nothing_was_found">Ничего не найдено!</string>
    <string name="empty_favorites_list">Список избранных пуст!</string>
    <string name="forward">Вперёд</string>
    <string name="refresh">Перезагрузить</string>
    <string name="favorites">Избранные</string>
    <string name="all">Все</string>
    <string name="tab_recommendations">Рекомендации</string>
    <string name="tab_all">Все</string>
    <string name="tab_favorites">Избранные</string>
    <string name="title_activity_new">NewActivity</string>
    <string name="title_home">Главная</string>
    <string name="title_history">История</string>
    <string name="request_header">Заголовок запроса</string>
    <string name="date">Дата</string>
    <string name="empty_history">Здесь Вы найдёте свою историю</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="example_start_date">2024-07-18</string>
    <string name="example_end_date">2024-07-19</string>
    <string name="dash">–</string>
    <string name="settings">Настройки</string>
    <string name="add_block">Блокировка рекламы</string>
    <string name="clear_cache">Очистить кэш</string>
    <string name="filters">Фильтры</string>
    <string name="sort">Сортировка</string>
    <string name="language">Язык</string>
    <string name="send_feedback">Обратная связь</string>
    <string name="describe_problem">Опишите вашу проблему или пожелание…</string>
    <string name="add_screenshot">Добавить скриншот</string>
    <string name="bookmarks">Закладки</string>
    <string name="bookmarks_empty_list">Список закладок пуст</string>
    <string name="empty_recommendations">Здесь будут Ваши рекомендации</string>
</resources>